src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_setup_mysql_cleartext_auth_notice.snap
---
source: src/tests/render_snapshots/connection_flow.rs
assertion_line: 105
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││          ╭ New Connection ────────────────────────────────────────────╮                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  Type:       [ MySQL                    ▼ ]                │                                                  │
│                                       ││          │  Name:       [                            ]                │                                                  │
│                                       ││          │  Transport:  [ TCP                      ▼ ]                │                                                  │
│                                       ││          │  Host:       [ localhost                  ]                │                                                  │
│                                       ││          │  Port:       [ 3306                       ]                │                                                  │
│                                       ││          │  Database:   [                            ]                │                                                  │
│                                       ││          │  User:       [                            ]                │                                                  │
│                                       │└──────────│  Password:   [ empty = no password        ]                │──────────────────────────────────────────────────┘
│                                       │┌ [3] Resul│  SSL Mode:   [ PREFERRED                ▼ ]                │──────────────────────────────────────────────────┐
│                                       ││(select a │  Cleartext:  [ enabled                  ▼ ]                │                                                  │
│                                       ││          │  Server Key: [                            ]                │                                                  │
│                                       ││          │  Get Server: [ disabled                 ▼ ]                │                                                  │
│                                       ││          │  Cert Path:  [                            ]                │                                                  │
│                                       ││          │  Key Path:   [                            ]                │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  Note: password is sent via mysql_clear_password           │                                                  │
│                                       ││          │  TLS required: REQUIRED, VERIFY_CA, or VERIFY_IDENTITY     │                                                  │
│                                       ││          │  Note: Connection info is stored locally in plain text     │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          ╰ Tab/⇧Tab: Field │ Enter: Toggle │ ^S: Connect │ Esc: Cancel╯                                                  │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
